<resources>
    <string name="app_name">My Application</string>
    <string name="log_in">LOG IN</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="enter_your_email">ENTER YOUR EMAIL</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="enter_phone_number">ENTER PHONE NUMBER</string>
    <string name="enter_your_name">ENTER YOUR NAME</string>
    <string name="register_here">REGISTER HERE</string>
    <string name="open">Open</string>
    />
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reviews">Reviews</string>
    <string name="contact_us">Contact Us</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="todo">TODO</string>
    <string name="our_services">Our Services</string>
    <string name="welcome">WELCOME</string>
    <string name="e_mechanics254">E_MECHANICS254</string>
    <string name="about_us">ABOUT US</string>
    <string name="services">SERVICES</string>
    <string name="events">EVENTS</string>
    <string name="share">SHARE</string>
    <string name="about_us_activity">About us Activity</string>
    <string name="click_to_book_appointment">CLICK TO BOOK APPOINTMENT</string>
    <string name="don_t_have_an_account_yet">Don\'t have an Account Yet</string>
    <string name="user_profile">User Profile</string>
    />
</resources>