<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center">


        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/register_here"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">




    <EditText
        android:id="@+id/edtName"
        android:drawableStart="@drawable/baseline_person_24"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_background"
        android:layout_weight="0"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:textColor="@color/green"
        android:hint="@string/enter_your_name" />

    <EditText
        android:id="@+id/edtEmail"
        android:drawableStart="@drawable/baseline_email_24"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="ENTER YOUR EMAIL"
        android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtPhone"
            android:drawableStart="@drawable/baseline_phone_enabled_24"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:gravity="center"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edtPassword"
            android:drawableStart="@drawable/baseline_lock_24"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:layout_weight="0"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="ENTER PASSWORD"/>


        <Button
            android:id="@+id/btnReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REGISTER"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/pink">

        </Button>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have Account?"
            android:textSize="18sp"
            android:textColor="#ffff"
            android:layout_marginTop="30dp">

        </TextView>

        <TextView
            android:id="@+id/tvLog_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:layout_marginTop="30dp"
            android:textSize="20sp">

        </TextView>





    </LinearLayout>



</LinearLayout>







