<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="ServicesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/material_dynamic_primary90"
        android:text="@string/our_services"
        android:textColor="@color/material_dynamic_primary20"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_marginTop="-28dp"
        android:id="@+id/lay_out_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_dynamic_neutral_variant30"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="25dp"
            android:backgroundTint="@color/material_dynamic_primary80"
            app:cardElevation="40dp"
            android:layout_margin="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="80dp"
                android:background="@drawable/diagonistics"
                android:contentDescription="@string/todo">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AUTO DIAGONISTICS"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="119dp"
                android:textColor="@color/material_dynamic_neutral_variant0" />





        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="25dp"
            android:backgroundTint="@color/material_dynamic_primary80"
            app:cardElevation="40dp"
            android:layout_margin="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/suspension"
                android:contentDescription="TODO">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SUSPENSION"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="119dp"
                android:textColor="@color/material_dynamic_neutral_variant0" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="-450dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_dynamic_neutral_variant30"
        android:orientation="horizontal">



        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="25dp"
            android:backgroundTint="@color/material_dynamic_primary80"
            app:cardElevation="40dp"
            android:layout_margin="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:background="@drawable/oil"
                android:layout_gravity="center_horizontal"
                android:importantForAccessibility="no">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OIL CHANGE"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="119dp"
                android:textColor="@color/material_dynamic_neutral_variant0" />


        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="25dp"
            android:backgroundTint="@color/material_dynamic_primary80"
            app:cardElevation="40dp"
            android:layout_margin="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/air"
                android:importantForAccessibility="no">


            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AIR CONDITIONING"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="119dp"
                android:textColor="@color/material_dynamic_neutral_variant0" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="-250dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_dynamic_neutral_variant30"
        android:orientation="horizontal">



        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="25dp"
            android:backgroundTint="@color/material_dynamic_primary80"
            app:cardElevation="40dp"
            android:layout_margin="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/towing"
                android:importantForAccessibility="no">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TOWING AND ROADSIDE"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="113dp"
                android:textColor="@color/material_dynamic_neutral_variant0" />


        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="25dp"
            android:backgroundTint="@color/material_dynamic_primary80"
            app:cardElevation="40dp"
            android:layout_margin="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/inspection"
                android:importantForAccessibility="no">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PRE PURCHASE INSPECTION"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="113dp"
                android:textColor="@color/material_dynamic_neutral_variant0" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>


<Button
    android:id="@+id/btnClick"
    android:layout_width="wrap_content"
    android:text="@string/click_to_book_appointment"
    android:textColor="@color/design_default_color_error"
    android:textSize="15sp"
    android:textStyle="bold"
    android:layout_marginTop="-60dp"
    android:layout_gravity="center"
    android:layout_height="50dp"
    android:backgroundTint="@color/material_dynamic_primary90"
    >
</Button>



</LinearLayout>

